--- a/Rotator.sketchplugin/Contents/Sketch/manifest.json
+++ b/Rotator.sketchplugin/Contents/Sketch/manifest.json
@@ -12,14 +12,26 @@
     {
       "name": "Rotate -90º Anti-Clockwise",
       "script": "script.js",
-      "handler": "rotateNegativeNinety",
-      "identifier": "rotateNegativeNinety"
+      "handler": "rotateMinusNinety",
+      "identifier": "rotateMinusNinety"
     },
     {
       "name": "Rotate 90º Clockwise",
       "script": "script.js",
       "handler": "rotateNinety",
       "identifier": "rotateNinety"
+    },
+    {
+      "name": "Rotate -180º Anti-Clockwise",
+      "script": "script.js",
+      "handler": "rotateMinusOneEighty",
+      "identifier": "rotateMinusOneEighty"
+    },
+    {
+      "name": "Rotate 180º Clockwise",
+      "script": "script.js",
+      "handler": "rotateOneEighty",
+      "identifier": "rotateOneEighty"
     },
     {
       "name": "Rotate...",
@@ -35,7 +47,9 @@
         "title" : "Rotator",
         "items" : [
           "rotateNinety",
-          "rotateNegativeNinety",
+          "rotateMinusNinety",
+          "rotateOneEighty",
+          "rotateMinusOneEighty",
           "-",
           "rotateAmount",
         ]
